# opnsense-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-docker.yml  publish-pypi.yml
docs/: README.md
docs/best-practices/: ddns-cloudflare.md  voip-whatsapp.md
src/opnsense_mcp/: __init__.py  __main__.py  api_client.py  config.py  config_cache.py  server.py
src/opnsense_mcp/tools/: __init__.py  dhcp.py  diagnostics.py  dns.py  firewall.py  haproxy.py  network.py  security.py  services.py  system.py  vpn.py
tests/: conftest.py  test_api_client.py  test_config.py  test_config_cache.py
tests/integration/: test_ipv6_analysis.py  test_live_dnsbl_write.py  test_live_readonly.py
tests/test_tools/: __init__.py  test_dhcp.py  test_diagnostics.py  test_dns.py  test_firewall.py  test_haproxy.py  test_network.py  test_registration.py  test_security.py  test_services.py  test_system.py  test_vpn.py
