[project]
name = "opnsense-mcp-server"
version = "0.4.0"
description = "Secure MCP server for OPNsense firewall management via AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Luca Marien"}]
keywords = ["opnsense", "mcp", "firewall", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Security",
]
dependencies = [
    "fastmcp>=2.0",
]

[project.urls]
Homepage = "https://github.com/lucamarien/opnsense-mcp-server"
Repository = "https://github.com/lucamarien/opnsense-mcp-server"
Issues = "https://github.com/lucamarien/opnsense-mcp-server/issues"
Changelog = "https://github.com/lucamarien/opnsense-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
opnsense-mcp = "opnsense_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opnsense_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "S",    # bandit security checks
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ANN",  # type annotations
]
ignore = [
    "S101",    # use of assert (needed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S107", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: live OPNsense tests (require real instance, skipped by default)",
]
addopts = "-m 'not integration'"
